Sec 7 - DeleteConfirmationModal Component

--- a/HiddenVilla_Server/Pages/HotelRooms/HotelRoomList.razor
+++ b/HiddenVilla_Server/Pages/HotelRooms/HotelRoomList.razor
@@ -2,6 +2,7 @@
 @using Models
 @using Business.Repository.IRepository
 @inject IHotelRoomRepository HotelRoomRepository
+@inject IJSRuntime JsRuntime
 
 <div class="row mt-4">
     <div class="col-8">
@@ -50,6 +51,7 @@
     </div>
 </div>
 
+<DeleteConfirmation></DeleteConfirmation>
 
 @code {
     private IEnumerable<HotelRoomDTO> HotelRooms { get; set; } = new List<HotelRoomDTO>();
@@ -58,4 +60,10 @@
     {
         HotelRooms = await HotelRoomRepository.GetAllHotelRooms();
     }
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        await JsRuntime.InvokeVoidAsync("ShowDeleteConfirmationModal");
+    }
+
 }
