--- a/HiddenVilla_Server/Shared/DeleteConfirmation.razor
+++ b/HiddenVilla_Server/Shared/DeleteConfirmation.razor
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel">Confirm Delete</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close" @onclick="()=>OnConfirmationChange(false)">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
@@ -11,14 +11,21 @@
                 Yakin ingin menghapus?
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal" @onclick="()=>OnConfirmationChange(false)" >
                     Cancel
                 </button>
 
+                @if (IsPorcessStart)
+                {
+                    <button type="button" class="btn btn-danger"><i class="fade fa-spin fa-spinner"></i>Processing...</button>
+                }
+                else
+                {
+                    <button type="button" class="btn btn-danger" @onclick="()=>OnConfirmationChange(true)">
+                        Delete
+                    </button>
 
-                <button type="button" class="btn btn-danger">
-                    Delete
-                </button>
+                }
 
 
             </div>
@@ -27,5 +34,18 @@
 </div>
 
 @code {
+    public bool IsPorcessStart { get; set; } = false;
+
+    [Parameter]
+    public EventCallback<bool> ConfirmationChanged { get; set; }
+
+    protected async Task OnConfirmationChange(bool value)
+    {
+        if (value)
+        {
+            IsPorcessStart = true;
+        }
+        await ConfirmationChanged.InvokeAsync(value);
+    }
 
 }
