--- a/HiddenVilla_Server/Shared/DeleteConfirmation.razor
+++ b/HiddenVilla_Server/Shared/DeleteConfirmation.razor
@@ -15,7 +15,7 @@
                     Cancel
                 </button>
 
-                @if (IsPorcessStart)
+                @if (IsProcessStart)
                 {
                     <button type="button" class="btn btn-danger"><i class="fade fa-spin fa-spinner"></i>Processing...</button>
                 }
@@ -34,16 +34,24 @@
 </div>
 
 @code {
-    public bool IsPorcessStart { get; set; } = false;
+    public bool IsProcessStart { get; set; } = false;
 
     [Parameter]
     public EventCallback<bool> ConfirmationChanged { get; set; }
+
+    [Parameter]
+    public bool IsParentComponentProcessing { get; set; }
+
+    protected override void OnParametersSet()
+    {
+        IsProcessStart = IsParentComponentProcessing;
+    }
 
     protected async Task OnConfirmationChange(bool value)
     {
         if (value)
         {
-            IsPorcessStart = true;
+            IsProcessStart = true;
         }
         await ConfirmationChanged.InvokeAsync(value);
     }
