--- a/HiddenVilla_Server/_Imports.razor
+++ b/HiddenVilla_Server/_Imports.razor
@@ -10,3 +10,4 @@
 @using HiddenVilla_Server.Shared
 @using HiddenVilla_Server.Pages.BelajarBlazor.BelajarBlazorComponent
 @using HiddenVilla_Server.Helper
+@using Blazored.TextEditor
