--- a/HiddenVilla_Server/Shared/NavMenu.razor
+++ b/HiddenVilla_Server/Shared/NavMenu.razor
@@ -57,6 +57,11 @@
                 <span class="oi oi-bookmark" aria-hidden="true"></span> Hotel Rooms
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="hotel-amnety">
+                <span class="oi oi-bookmark" aria-hidden="true"></span> Amnety
+            </NavLink>
+        </li>
     </ul>
 </div>
 
