--- a/HiddenVilla_Server/Pages/HotelRooms/HotelRoomList.razor
+++ b/HiddenVilla_Server/Pages/HotelRooms/HotelRoomList.razor
@@ -4,6 +4,7 @@
 @inject IHotelRoomRepository HotelRoomRepository
 @inject IJSRuntime JsRuntime
 @inject HiddenVilla_Server.Service.IService.IFileUpload FIleUpload
+@inject NavigationManager NavigationManager
 
 <div class="row mt-4">
     <div class="col-8">
@@ -85,7 +86,7 @@
             HotelRoomDTO hotelRoom = await HotelRoomRepository.GetHotelRoom(DeleteRoomId.Value);
             foreach (var image in hotelRoom.HotelRoomImages)
             {
-                var imageName = image.RoomImageUrl.Replace($"RoomImages/", "");
+                var imageName = image.RoomImageUrl.Replace($"{NavigationManager.BaseUri}RoomImages/", "");
                 FIleUpload.HapusFile(imageName);
             }
 
